<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/fragment_verification_logo"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_verification_et_code"
        style="@style/login_cycle_edit_text_style"
        android:hint="@string/verification_code"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_verification_logo" />
    <EditText
        android:id="@+id/fragment_verification_et_change_pass"
        style="@style/login_cycle_edit_text_style"
        android:hint="@string/new_pass"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_verification_et_code" />
    <EditText
        android:id="@+id/fragment_verification_et_confirm_pass"
        style="@style/login_cycle_edit_text_style"
        android:hint="@string/confirm_pass"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_verification_et_change_pass" />
    <Button
        android:id="@+id/fragment_verification_btn_change_pass"
        style="@style/user_cycle_button"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="32dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_verification_et_confirm_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>